fix nest deletion alignment & clean nestsubmit

--- a/static/sass/nest.scss
+++ b/static/sass/nest.scss
@@ -43,6 +43,10 @@
   background: rgb(255, 0, 0);
   padding: 5px;
   color: rgb(255, 255, 255);
+  cursor: pointer;
+  width:30px;
+  text-shadow: 1px 1px 1px #000;
+  font-weight: normal !important;
 }
 .submit-nest{
   font-size:20px;
